kubernetes-manifests/Microservices.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emailservice
spec:
  selector:
    matchLabels:
      app: emailservice
  template:
    metadata:
      labels:
        app: emailservice
    spec:
      containers:
      - name: service
        image: gcr.io/google-samples/microservices-demo/emailservice:v0.10.0
        ports:
        - containerPort: 8080
        livenessProbe:
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe","-addr=:8080"]
        readinessProbe:
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe","-addr=:8080"]
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 150m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: emailservice
spec:
  type: ClusterIP
  selector:
    app: emailservice
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendationservice
spec:
  selector:
    matchLabels:
      app: recommendationservice
  template:
    metadata:
      labels:
        app: recommendationservice
    spec:
      containers:
      - name: service
        image: gcr.io/google-samples/microservices-demo/recommendationservice:v0.10.0
        ports:
        - containerPort: 8080
        livenessProbe:
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe","-addr=:8080"]
        readinessProbe:
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe","-addr=:8080"]

---
apiVersion: v1
kind: Service
metadata:
  name: recommendationservice
spec:
  type: ClusterIP
  selector:
    app: recommendationservice
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productcatalogservice
spec:
  selector:
    matchLabels:
      app: productcatalogservice
  template:
    metadata:
      labels:
        app: productcatalogservice
    spec:
      containers:
      - name: service
        image: gcr.io/google-samples/microservices-demo/productcatalogservice:v0.10.0
        ports:
        - containerPort: 3550
        livenessProbe:
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe","-addr=:3550"]
        readinessProbe:
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe","-addr=:3550"]

---
apiVersion: v1
kind: Service
metadata:
  name: productcatalogservice
spec:
  type: ClusterIP
  selector:
    app: productcatalogservice
  ports:
  - protocol: TCP
    port: 3550
    targetPort: 3550

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paymentservice
spec:
  selector:
    matchLabels:
      app: paymentservice
  template:
    metadata:
      labels:
        app: paymentservice
    spec:
      containers:
      - name: service
        image: gcr.io/google-samples/microservices-demo/paymentservice:v0.10.0
        ports:
        - containerPort: 50051
        livenessProbe:
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe","-addr=:50051"]
        readinessProbe:
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe","-addr=:50051"]

---
apiVersion: v1
kind: Service
metadata:
  name: paymentservice
spec:
  type: ClusterIP
  selector:
    app: paymentservice
  ports:
  - protocol: TCP
    port: 50051
    targetPort: 50051

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currencyservice
spec:
  selector:
    matchLabels:
      app: currencyservice
  template:
    metadata:
      labels:
        app: currencyservice
    spec:
      containers:
      - name: service
        image: gcr.io/google-samples/microservices-demo/currencyservice:v0.10.0
        ports:
        - containerPort: 7000
        livenessProbe:
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe","-addr=:7000"]
        readinessProbe:
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe","-addr=:7000"]

---
apiVersion: v1
kind: Service
metadata:
  name: currencyservice
spec:
  type: ClusterIP
  selector:
    app: currencyservice
  ports:
  - protocol: TCP
    port: 7000
    targetPort: 7000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shippingservice
spec:
  selector:
    matchLabels:
      app: shippingservice
  template:
    metadata:
      labels:
        app: shippingservice
    spec:
      containers:
      - name: service
        image: gcr.io/google-samples/microservices-demo/shippingservice:v0.10.0
        ports:
        - containerPort: 50051
        livenessProbe:
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe","-addr=:50051"]
        readinessProbe:
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe","-addr=:50051"]

---
apiVersion: v1
kind: Service
metadata:
  name: shippingservice
spec:
  type: ClusterIP
  selector:
    app: shippingservice
  ports:
  - protocol: TCP
    port: 50051
    targetPort: 50051

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adservice
spec:
  selector:
    matchLabels:
      app: adservice
  template:
    metadata:
      labels:
        app: adservice
    spec:
      containers:
      - name: service
        image: gcr.io/google-samples/microservices-demo/adservice:v0.10.0
        ports:
        - containerPort: 9555
        livenessProbe:
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe","-addr=:9555"]
        readinessProbe:
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe","-addr=:9555"]
        resources:
          requests:
            cpu: 200m
            memory: 128Mi
          limits:
            cpu: 280m
            memory: 256Mi

---
apiVersion: v1
kind: Service
metadata:
  name: adservice
spec:
  type: ClusterIP
  selector:
    app: adservice
  ports:
  - protocol: TCP
    port: 9555
    targetPort: 9555

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cartservice
spec:
  selector:
    matchLabels:
      app: cartservice
  template:
    metadata:
      labels:
        app: cartservice
    spec:
      containers:
      - name: service
        image: gcr.io/google-samples/microservices-demo/cartservice:v0.10.0
        ports:
        - containerPort: 7070
        livenessProbe:
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe","-addr=:6379"]
        readinessProbe:
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe","-addr=:6379"]

---
apiVersion: v1
kind: Service
metadata:
  name: cartservice
spec:
  type: ClusterIP
  selector:
    app: cartservice
  ports:
  - protocol: TCP
    port: 7070
    targetPort: 7070

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-cart
spec:
  selector:
    matchLabels:
      app: redis-cart
  template:
    metadata:
      labels:
        app: redis-cart
    spec:
      containers:
      - name: redis
        image: redis:alpine
        ports:
        - containerPort: 6379
        livenessProbe:
          initialDelaySeconds: 5
          periodSeconds: 5
          tcpSocket:
            port: 6379
        readinessProbe:
          initialDelaySeconds: 5
          periodSeconds: 5
          tcpSocket:
            port: 6379
        resources:
          requests:
            cpu: 70m
            memory: 200Mi
          limits:
            cpu: 100m
            memory: 300Mi

        volumeMounts:
        - name: redis-data
          mountPath: /data
      volumes:
      - name: redis-data
        emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: redis-cart
spec:
  type: ClusterIP
  selector:
    app: redis-cart
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkoutservice
spec:
  selector:
    matchLabels:
      app: checkoutservice
  template:
    metadata:
      labels:
        app: checkoutservice
    spec:
      containers:
      - name: service
        image: gcr.io/google-samples/microservices-demo/checkoutservice:v0.10.0
        ports:
        - containerPort: 5050
        livenessProbe:
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe","-addr=:5050"]
        readinessProbe:
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe","-addr=:5050"]

---
apiVersion: v1
kind: Service
metadata:
  name: checkoutservice
spec:
  type: ClusterIP
  selector:
    app: checkoutservice
  ports:
  - protocol: TCP
    port: 5050
    targetPort: 5050

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: service
        image: gcr.io/google-samples/microservices-demo/frontend:v0.10.0
        ports:
        - containerPort: 8080
        livenessProbe:
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe","-addr=:8080"]
        readinessProbe:
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe","-addr=:8080"]

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    nodePort: 30007

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shoppingassistantservice
spec:
  selector:
    matchLabels:
      app: shoppingassistantservice
  template:
    metadata:
      labels:
        app: shoppingassistantservice
    spec:
      containers:
      - name: service
        image: gcr.io/google-samples/microservices-demo/shoppingassistantservice:v0.10.0
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: shoppingassistantservice
spec:
  type: ClusterIP
  selector:
    app: shoppingassistantservice
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
